--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "howto_es6",
   "version": "1.0.0",
   "scripts": {
+    "build": "babel src"
   },
-  "private": "true"
+  "private": "true",
+  "devDependencies": {
+    "babel-cli": "6.5.1"
+  }
 }
